hard-gists/7704845/run.log
=== Docker Run Log for 7704845 ===
Started at: Mi 29. Okt 17:16:50 CET 2025

[2025-10-29 17:16:50] START: Running container for 7704845
[2025-10-29 17:16:50] SUCCESS: Container 0c90836f709f99d550ebb6edba3e178ae9175b6bbf43af08b4d4f9dc809e0d90 started for 7704845
=== Container logs for 7704845 ===
  File "/snippet.py", line 48
    print "Pushed button %s" % (button, )
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7704845 ===
[2025-10-29 17:16:52] INFO: Container 0c90836f709f99d550ebb6edba3e178ae9175b6bbf43af08b4d4f9dc809e0d90 has stopped
